# mosaik-demod

./: .gitignore  README.md  collector.py  demo.py  demo_activitybased.py  demo_newload modular.py  demo_newload.py  inputs.xlsx  main.py  requirements-dev.txt  requirements.txt  setup.cfg  simulator_mosaik.py  simulator_mosaik_household.py  simulator_mosaik_modular.py  simulator_mosaik_modular_activitybased.py
CREST_data/: .~lock.CREST_Demand_Model_v2.2.xlsm#  CREST_Demand_Model_v2.2.xlsm - AppliancesAndWaterFixtures.csv  CREST_Demand_Model_v2.2.xlsm - Primary Heating Systems.csv  CREST_Demand_Model_v2.2.xlsm - WaterUsage.csv  CREST_Demand_Model_v2.3.3.xlsm - ActivityStats.csv  CREST_Demand_Model_v2.3.3.xlsm - Buildings.csv  CREST_Demand_Model_v2.3.3.xlsm - HeatingControls.csv  CREST_Demand_Model_v2.3.3.xlsm - HeatingControlsTPM.csv  CREST_Demand_Model_v2.3.3.xlsm - PrimaryHeatingSystems.csv  CREST_Demand_Model_v2.3.3.xlsm - Starting states.csv  CREST_Demand_Model_v2.3.3.xlsm - bulbs.csv  CREST_Demand_Model_v2.3.3.xlsm - tpm1_wd.csv  CREST_Demand_Model_v2.3.3.xlsm - tpm1_we.csv  CREST_Demand_Model_v2.3.3.xlsm - tpm2_wd.csv  CREST_Demand_Model_v2.3.3.xlsm - tpm2_we.csv  CREST_Demand_Model_v2.3.3.xlsm - tpm3_wd.csv  CREST_Demand_Model_v2.3.3.xlsm - tpm3_we.csv  CREST_Demand_Model_v2.3.3.xlsm - tpm4_wd.csv  CREST_Demand_Model_v2.3.3.xlsm - tpm4_we.csv  CREST_Demand_Model_v2.3.3.xlsm - tpm5_wd.csv  CREST_Demand_Model_v2.3.3.xlsm - tpm5_we.csv  CREST_Demand_Model_v2.3.3.xlsm - tpm6_wd.csv  CREST_Demand_Model_v2.3.3.xlsm - tpm6_we.csv  (+1 more)
GermanTOU/: __init__.py  clustering.py  (+8 more)
(+3365 files in other folders)
