[metadata]
name = mosaikdemod
version = 0.1
author = demod-herus
author_email = demod@groupes.epfl.ch
description = Adaptor to use demod simulators in mosaik.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/epfl-herus/mosaik-demod
project_urls =
    Documentation = https://demod.readthedocs.io/en/latest/tutorials/cosimulation.html#mosaik-integration
    demod = https://demod.readthedocs.io/en/latest/index.html
    mosaik = https://mosaik.readthedocs.io/en/latest/overview.html
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = mosaikdemod
python_requires = >=3.8

[options.packages.find]
where = src